--- a/css/styles.css
+++ b/css/styles.css
@@ -9,141 +9,267 @@
     --naranja: #FC7300;
 }
 
-body {
-    display: block;
-    margin: 0 auto;
-    padding: 0 auto;
-}
-  
-body * {
-    display: block;
-    margin: 0 auto;
-    padding: 0 auto;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
 }
 
-header {    
-    background-color: var(--claro);
-}
-
-header div {
-    display: flex; 
-    justify-content: center;
+h1 {
+    padding: 0.5rem;
+    text-align: center;
+    background-color: var(--azul);
+    color: var(--claro);
 }
 
 nav {
-    background-color: var(--azul);
-}
-
-nav ul {
+    padding: 0.5rem; 
+    background-color: var(--verde);
     display: flex;
     justify-content: center;
-    list-style: none;
 }
-  
-nav ul li {
-    margin: 20px;
+
+ul {
+    list-style-type: none;
 }
-  
-nav ul li a {
-    position: relative;
-    margin: 15px;
-    font-size: 25px;
-    color: var(--claro);
+
+li {
+    padding: 0.5rem;
+    text-align: center;
+}
+
+li a {
     text-decoration: none;
-}
-
-nav ul li a:before {
-    content: "";
-    background: var(--naranja);
-    position: absolute;
-    bottom: -10px;
-    width: 0%;
-    height: 5px;
-}
-
-nav ul li a:hover::before {
-    width: 100%;
-    transition: 1s;
+    color: var(--claro);    
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+}
+
+.img-portada {
+    width: 100%;
+}
+
+h2 {
+    text-align: center;
+    background-color: var(--naranja);
+    color: var(--violeta);
+    padding: 0.5rem;
+}
+
+h3 { 
+    text-align: center;
+    background-color: var(--gris);
+    color: var(--claro);
+    padding: 0.5rem;
+}
+
+p {
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.img-section {
     width: 100%;
 }
 
 section {
-    padding: 3%;  
-}
-
-.h2-propuestas {
-    padding: 3%;
-}
-
-.section-propuestas{
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.card {
-    border-radius: 5%;
-    height: 650px;
-    width: 352px;
-    background-color: #d3cfcfc2;
-    margin-top: 8px;
-    position: relative;
-}
-
-.card-bottom {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 350px;
 }
 
-p {
-    padding-left: 5%;
-    padding-right: 5%;
+.section-propuestas { 
+    display: none;
+}
+
+.avisos {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;   
+    gap: 0.5rem;
+    padding: 0.5rem;
+}
+
+strong {
+    width: 75%;
     text-align: center;
-}
-
-.card-top-desarrollo {
-    background-image: url(../img/desarrollo.jpg);
-}
-
-.card-top-redes {
-    background-image: url(../img/redes.jpg);
-}
-
-.card-top-seguridad {
-    background-image: url(../img/seguridad.jpg);
-}
-
-.card-top-mecatronica {
-    background-image: url(../img/mecatronica.jpg);
-}
-
-.card-top {
-    background-size: cover;
-    border-top-left-radius: 5%;
-    border-top-right-radius: 5%;
-    height: 300px;
-}
-
-.a-ver-mas {
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    padding: 15px 55px;
-    background-color: var(--azul);
-}
-  
-.a-ver-mas:hover {
+    border-style: dotted;
+    background-color: var(--naranja);
     font-size: 1.2rem;
-    background-color: var(--violeta);
 }
 
+.propuesta-mobile {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1.5rem;
+    justify-content: space-around;
+    padding: 1rem;
+}
 
+figure {
+    text-align: center;
+}
 
+section article {
+    margin: 1rem;
+}
+
+/* section article h2, p {
+    background-color: lightgray;
+    text-align: left;
+} */
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    background-color: var(--azul);
+    padding: 1rem;
+}
+
+.redes-sociales {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: start;
+}
+
+footer h4 {
+    color: var(--claro);
+    text-align: center;
+}
+
+iframe {
+    padding: 0.5rem;
+}
+
+footer div p {
+    text-align: left;
+    font-size: 0.8rem;
+    color: var(--claro);
+}
+
+@media (min-width: 768px) {
+
+    body {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+    
+    ul {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .section-1 {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .section-2 {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .img-section {
+        width: 50%;
+    }    
+
+    .section-propuestas{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 1rem;
+        padding: 1rem;
+    }
+    
+    .card {
+        border-radius: 5%;
+        height: 400px;
+        width: 200px;
+        background-color: #d3cfcfc2;
+        margin-top: 8px;
+    }
+    
+    .card-top-arte {
+        background-image: url(../img/arte.jpg);
+    }
+    
+    .card-top-robot {
+        background-image: url(../img/ciencia.jpg);
+    }
+    
+    .card-top-deporte {
+        background-image: url(../img/deporte.jpg);
+    }
+    
+    .card-top-idioma {
+        background-image: url(../img/ingles.jpg);
+    }
+
+    .card-top-informatica {
+        background-image: url(../img/informatica.jpg);
+    }
+
+    .card-top-musica {
+        background-image: url(../img/musica.jpg);
+    }
+    
+    .card-top {
+        background-size: cover;
+        border-top-left-radius: 5%;
+        border-top-right-radius: 5%;
+        height: 200px;
+    }
+    
+    .card-bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        height: 200px;
+        padding: 0.5rem;
+    }
+    
+    .titulo-propuesta {
+        font-size: 1.2rem;
+        font-weight: bold;
+        padding: 0;
+    }
+    
+    .descripcion-propuesta {
+        padding: 0;
+    }
+    
+    .a-ver-mas {
+        text-decoration: none;
+        color: var(--claro);
+        text-align: center;
+        margin-left: 20px;
+        margin-right: 20px;
+        background-color: var(--azul);
+    }
+      
+    .a-ver-mas:hover {
+        font-size: 1.2rem;
+        background-color: var(--violeta);
+    }
+    
+    .propuesta-mobile {
+        display: none;
+    }
+
+    .avisos {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1.5rem;
+        padding: 1rem;
+    }
+}
