--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,11 @@ main {
     background-color: #f4eed4;
 }
 
+.portada {
+    display: flex;
+    flex-direction: column;
+}
+
 .img-portada {
     width: 100%;
 }
@@ -183,6 +188,10 @@ footer div p {
     color: var(--claro);
 }
 
+.portada-desktop {
+    display: none;
+}
+
 @media (min-width: 768px) {
 
     body {
@@ -299,5 +308,83 @@ footer div p {
         justify-content: center;
         gap: 1.5rem;
         padding: 1rem;
+    }
+
+    .portada-desktop {
+        display: none;
+    }
+}
+
+@media (min-width: 1360px) {
+
+    body {
+        max-width: 1360px;
+        margin: auto;
+    }
+
+    .img-portada {
+        display: none;
+    }
+
+    .portada-desktop{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .img-portada-desktop {
+        background-size: cover;
+        border: 2px solid var(--gris);
+        height: 400px;
+        width: 420px;
+    }
+
+    .img-1 {
+        background-image: url(../img/quienes-somos.jpg);
+    }
+
+    .img-2 {
+        background-image: url(../img/portada.jpg);
+    }
+
+    .img-3 {
+        background-image: url(../img/porque-elegirnos.jpg);
+    }
+
+    /* .img-portada-desktop{
+        width: 30%;
+        border: 2px solid var(--gris);
+    } */
+    
+    main {
+        display: flex;
+        flex-flow: row wrap;
+    }    
+
+    .h2-portada {
+        width: 100%;
+    }
+
+    .section-1, .section-2 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        margin-left: 1.25%;
+        margin-right: 1.25%;
+        width: 47.5%;
+        display: flex;
+        flex-direction: column;
+        border: 2px solid var(--gris);
+    }
+
+    .img-section {
+        display: none;
+    }
+
+    .section-3, .section-4 {
+        width: 100%;
+        /* margin-left: 1.25%;
+        margin-right: 1.25%; */
     }
 }
